chore(package): add scope name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-stateful-input",
+  "name": "@haipham/react-stateful-input",
   "version": "1.0.0",
   "description": "Stateful React input wrapper that deals with caret moving to end of text for controlled components",
   "main": "./dist/src/index.js",
